--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 APPTITLE=Список запланированных дел
-DBURL=mongodb://127.0.0.1:27017/
-DBNAME=todos
+SECRETKEY=uohubdrubihuieramhib,ubthuei,bpruoie,bprbtoeui,rbje,btruei
