--- a/package.json
+++ b/package.json
@@ -25,18 +25,13 @@
     ]
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ejs": "^3.1.10",
     "express": "^4.18.2",
-    "express-flash-message": "^2.1.0",
-    "express-session": "^1.18.0",
-    "express-validator": "^7.0.1",
-    "http-errors": "^2.0.0",
-    "method-override": "^3.0.0",
-    "mongodb": "^6.6.2",
-    "mongoose": "^8.3.5",
-    "multer": "^1.4.5-lts.1",
-    "session-file-store": "^1.5.0"
+    "express-validator": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.4",
+    "multer": "^1.4.4"
   }
 }
